<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radek.madej.crm.activities.AddCustomerActivity" >

    <TextView
        android:id="@+id/new_customer_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/new_customer_employee_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_customer_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/new_customer_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_customer_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" >
    </EditText>

    <TextView
        android:id="@+id/new_customer_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/new_customer_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" >
        </EditText>

        <Button
            android:id="@+id/geocode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/geocode" />
    </LinearLayout>

    <Button
        android:id="@+id/add_customer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_customer"
        android:onClick="onClick" />
    
</LinearLayout>