<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radek.madej.crm.activities.CustomerDetailsActivity" >

    <TextView
        android:id="@+id/customer_detail_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/customer_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/customer_detail_employee_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/customer_detail_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/customer_detail_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp" />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
        android:id="@+id/customer_detail_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp" 
        android:layout_weight="1"/>
        
        <ImageButton
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Zadzwoń"
            android:onClick="onClick"
            android:src="@drawable/call_icon" 
            android:background="@null"/>
        
    </LinearLayout>
    

    <TextView
        android:id="@+id/customer_detail_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/customer_detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/meetings_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/meetings_button" />

        <Button
            android:id="@+id/show_on_map_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/show_on_map" />
    </LinearLayout>

    

</LinearLayout>