<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radek.madej.crm.activities.AddMeetingActivity" >

    <TextView
        android:id="@+id/meeting_customer_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer"
        android:textSize="20sp" 
        android:elevation="5dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/meeting_customer_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp" 
            android:elevation="5dp"/>

        <Button
            android:id="@+id/choose_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/choose_customer" 
            />
    </LinearLayout>

    <TextView
        android:id="@+id/meeting_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_description"
        android:textSize="20sp" 
        android:elevation="5dp"/>

    <EditText
        android:id="@+id/meeting_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp">

        <TextView
            android:id="@+id/meeting_date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:onClick="onClick"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/meeting_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textSize="25sp"
            android:onClick="onClick"
            android:elevation="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/add_meeting_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/add_meeting" />

</LinearLayout>